# maxit_sales_bot

./: .gitignore  docker-compose.yml  install.md  maxit.drawio  package-lock.json  readme.md
architecture/: maxit.drawio
backend/: docker-compose.yml  pyproject.toml
backend/conversation_service/: agent_registry.py  main.py
backend/conversation_service/agent_infrastructure/: maxit_agent.py
backend/conversation_service/agents/product_advisor_agent/: product_advisor_graph.py
backend/conversation_service/agents/rm_agent/: debt_profiling_graph.py  peer_comparison_graph.py  rm_graph.py
backend/conversation_service/config/: config.py
backend/conversation_service/frameworks/: debt_profiling_framework.py  debt_profiling_workflow.py  framework_registry.py  peer_comparison_framework.py
backend/conversation_service/states/: debt_profiling_state.py  peer_comparison_state.py  product_advisor_states.py  rm_states.py  workflow_state.py
backend/conversation_service/utils/: entity_detector.py  framework_detector.py  graph_utils.py  logging_utils.py  query_classifier.py  user_lookup_service.py
backend/conversation_service/workflows/: peer_comparison_workflow.py
backend/initdb/: 01-init-users.sql  02-init-assignments.sql
docs/architecture/: maxit.drawio
frontend/chatbot-ui/: README.md  package.json
infrastructure/cdk-app/: cdk.context.json  cdk.json  package-lock.json  package.json
infrastructure/ecs-ollama-deepseek/: README.md  cdk.json  package-lock.json  (+1 more)
notebooks/: ar-template-processing.py  lang-subgraph.ipynb  lang-subgraph.py
poc/: edgar_pdf_ar.py
(+11 files in other folders)
